--- a/config.json
+++ b/config.json
@@ -33,8 +33,8 @@
         "site_mail": "box@example.com",
         "vhost": {
           "document_root": "",
-          "url": "drupal7.dev",
-          "alias": ["www.drupal7.dev"]
+          "url": "sancouncil.dev",
+          "alias": ["www.sancouncil.dev"]
         }
       }
     }
